--- a/src/public/css/login_register.css
+++ b/src/public/css/login_register.css
@@ -12,10 +12,10 @@ a {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: auto;
 
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  -moz-user-select: auto;
+  -webkit-user-select: auto;
+  -ms-user-select: auto;
+  user-select: auto;
 }
 
 body {
