--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -45,7 +45,7 @@
                   <label
                     for="account-input"
                     class="text-base font-semibold px-1"
-                    >등록번호</label
+                    >면허번호</label
                   ><span class="notification"> </span>
                 </div>
                 <div class="flex">
@@ -58,7 +58,7 @@
                     type="text"
                     name="account"
                     class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-blue-300"
-                    placeholder="등록번호를 입력해주세요"
+                    placeholder="면허번호를 입력해주세요"
                     id="account-input"
                   />
                 </div>
@@ -113,5 +113,5 @@
       </div>
     </div>
   </body>
-  <script src="js/login.js"></script>
+  <script src="js/login.min.js"></script>
 </html>
