--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -5,107 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/login_register.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp"
     />
-
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <title><%= title %></title>
   </head>
-  <body>
+  <body id="body">
     <div id="mask">
       <img src="" alt="" />
     </div>
-    <div
-      class="min-w-screen min-h-screen flex items-center justify-center px-5 py-5"
-    >
-      <div
-        class="bg-gray-100 text-gray-500 rounded-3xl shadow-xl w-full overflow-hidden"
-        style="max-width: 1000px"
-      >
-        <div class="md:flex w-full">
-          <div
-            class="hidden md:flex w-1/2 bg-white flex-nowrap justify-center p-10 items-center"
-          >
+    <div class="main">
+      <div class="_container">
+        <div class="flexbox">
+          <div class="_mainLogo">
             <img src="images/khima.png" alt="" srcset="" class="logo-img" />
           </div>
-          <div
-            class="w-full md:w-1/2 py-10 px-5 md:px-10 flex-col justify-between"
-          >
-            <div class="text-center mb-10">
-              <h1 class="font-bold text-3xl text-gray-900">로그인</h1>
+          <div class="_loginForm">
+            <div class="title">
+              <h1 class="">로그인</h1>
             </div>
-            <div class="flex -mx-3 input-wrapper" id="account-wrapper">
-              <div class="w-full px-3 mb-4">
-                <div class="flex justify-between">
-                  <label
-                    for="account-input"
-                    class="text-base font-semibold px-1"
-                    >면허번호</label
+            <div class="input-wrapper" id="account-wrapper">
+              <div>
+                <div>
+                  <label for="account-input" class="inputLabel">면허번호</label
                   ><span class="notification"> </span>
                 </div>
                 <div class="flex">
-                  <div
-                    class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"
-                  >
+                  <div class="icon">
                     <span class="material-icons-outlined"> lock </span>
                   </div>
                   <input
                     type="text"
                     name="account"
-                    class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-blue-300"
                     placeholder="면허번호를 입력해주세요"
                     id="account-input"
                   />
                 </div>
               </div>
             </div>
-            <div class="flex -mx-3 input-wrapper" id="name-wrapper">
-              <div class="w-full px-3 mb-4">
-                <div class="flex justify-between">
-                  <label for="name-input" class="text-base font-semibold px-1"
-                    >성함</label
+            <div class="input-wrapper" id="name-wrapper">
+              <div>
+                <div>
+                  <label for="name-input" class="inputLabel">성함</label
                   ><span class="notification"> </span>
                 </div>
                 <div class="flex">
-                  <div
-                    class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"
-                  >
-                    <span class="material-icons-outlined text-gray-400">
+                  <div class="icon">
+                    <span class="material-icons-outlined">
                       account_circle
                     </span>
                   </div>
                   <input
                     type="text"
                     name="name"
-                    class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-blue-300"
                     placeholder="성함을 입력해주세요"
                     id="name-input"
                   />
                 </div>
               </div>
             </div>
-            <div class="flex -mx-3 flex-col text-center">
-              <div class="w-full px-3 mt-4 mb-4">
+            <div class="buttonWrapper">
+              <div>
                 <button
                   id="submitBtn"
                   class="block w-full mx-auto text-white hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-lg px-3 py-3 font-semibold"
-                  data-tooltip-target="tooltip-default"
                 >
                   입장하기
                 </button>
-                <div
-                  id="tooltip-default"
-                  role="tooltip"
-                  class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700"
-                >
-                  Tooltip content
-                  <div class="tooltip-arrow" data-popper-arrow></div>
-                </div>
               </div>
             </div>
           </div>
@@ -113,5 +81,6 @@
       </div>
     </div>
   </body>
-  <script src="js/login.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="js/login.js"></script>
 </html>
